outputs/c8ebe23d-aeda-4fa0-b24e-cceebad6491b.txt
File "C:\Users\madhu\Desktop\compiler\compiler\codes\c8ebe23d-aeda-4fa0-b24e-cceebad6491b.py", line 1
    print("A)
          ^
SyntaxError: unterminated string literal (detected at line 1)